feat: expose protected geon deletion APIs
